# webp-pixbuf-loader

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE.LGPL-2  README  README.md  io-webp-anim-iter.c  io-webp-anim.c  io-webp-anim.h  io-webp.c  io-webp.h  meson.build  meson_options.txt  webp-pixbuf.thumbnailer.in  wscript
.github/: workflows
.github/workflows/: codeql-analysis.yml  fedora.yml  linux.yml  macos.yml  main.yml  msys2.yml  ossar.yml  ubuntu.yml
src/: io-webp.c
tests/: gtk3-animation-sample.c  loaders.cache.in  meson.build  t1.c  t2.c  t3.c  t4-gtk3.c  t4.c  t5.c  t6.c  t_icc.c  t_jpeg.c  t_large.c  t_null_error.c  t_save.c  t_scaled.c  t_signals.c
