cmake_minimum_required(VERSION 2.8)
project(webp-pixbuf-loader)
find_package(PkgConfig)
pkg_check_modules(WEBP REQUIRED libwebp>=0.4.3)
pkg_check_modules(GDK_PIXBUF REQUIRED gdk-pixbuf-2.0>=2.22)
include_directories(${WEBP_INCLUDE_DIRS} ${GDK_PIXBUF_INCLUDE_DIRS})
add_library(pixbufloader-webp SHARED io-webp.c)
target_link_libraries(pixbufloader-webp ${WEBP_LIBRARIES} ${GDK_PIXBUF_LIBRARIES})
set(INSTALL_LIB_DIR lib CACHE PATH "Installation directory for libraries")
if($ENV{GDK_PIXBUF_MODULEDIR})
	set(GDK_PIXBUF_MODULEDIR $ENV{GDK_PIXBUF_MODULEDIR})
else()
	pkg_get_variable(GDK_PIXBUF_BINARY_VERSION gdk-pixbuf-2.0 gdk_pixbuf_binary_version)
	set(GDK_PIXBUF_MODULEDIR ${INSTALL_LIB_DIR}/gdk-pixbuf-2.0/${GDK_PIXBUF_BINARY_VERSION}/loaders/)
endif()
install(TARGETS pixbufloader-webp
	LIBRARY DESTINATION "${GDK_PIXBUF_MODULEDIR}"
)
